--- a/PhotoPasser/TaskOverview.xaml
+++ b/PhotoPasser/TaskOverview.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:conv="using:PhotoPasser.Converters"
+    xmlns:c="using:PhotoPasser.Controls"
     xmlns:helper="using:PhotoPasser.Helper"
     mc:Ignorable="d">
     <Page.Resources>
@@ -29,45 +30,40 @@
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="local:FiltTask">
                         <UserControl x:Name="TaskItemPresenter" PointerEntered="LibraryItem_PointerEntered" PointerExited="LibraryItem_PointerExited" IsDoubleTapEnabled="True" DoubleTapped="TaskItemPresenter_DoubleTapped">
-                            <Grid BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                                  BorderThickness="1"
-                                  Background="{ThemeResource CardBackgroundFillColorDefault}"
-                                  ColumnSpacing="16"
-                                  Height="200"
-                                  Width="300"
-                                  CornerRadius="{StaticResource OverlayCornerRadius}">
-                                <Image Source="{x:Bind PresentPhoto,Converter={StaticResource UriImageSourceConverter}}" Stretch="UniformToFill"/>
-                                <!--<Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                    <Rectangle.Fill>
-                                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                                            <LinearGradientBrush.GradientStops>
-                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondaryTransparent}" Offset="0.0"/>
-                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondaryTransparent}" Offset="0.2"/>
-                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondarySoild}" Offset="0.623"/>
-                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondarySoild}" Offset="1"/>
-                                            </LinearGradientBrush.GradientStops>
-                                        </LinearGradientBrush>
-                                    </Rectangle.Fill>
-                                </Rectangle>-->
-								<Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Fill="{x:Bind MaskBrush,Mode=OneWay}">
-								</Rectangle>
-								<Grid HorizontalAlignment="Stretch" MaxHeight="100" VerticalAlignment="Bottom" Padding="16,0,16,16">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="20" />
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" Style="{ThemeResource BodyStrongTextBlockStyle}" Text="{x:Bind Name}"/>
-                                    <TextBlock Grid.Row="1" Style="{ThemeResource BodyTextBlockStyle}" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{x:Bind Description}"/>
+                            <c:ImageMaskSurface BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                                BorderThickness="1"
+                                                Background="{ThemeResource CardBackgroundFillColorDefault}"
+                                                BackgroundImage="{x:Bind PresentPhoto,Converter={StaticResource UriImageSourceConverter}}"
+                                                Height="200"
+                                                Width="300"
+                                                CornerRadius="{StaticResource OverlayCornerRadius}">
+                                <c:ImageMaskSurface.MaskStops>
+                                    <c:MaskStop Offset="0.0" Alpha="0"/>
+                                    <c:MaskStop Offset="0.2" Alpha="0"/>
+                                    <c:MaskStop Offset="0.623" Alpha="255"/>
+                                    <c:MaskStop Offset="1.0" Alpha="255"/>
+
+                                </c:ImageMaskSurface.MaskStops>
+                                <Grid ColumnSpacing="16" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                    <Grid HorizontalAlignment="Stretch" MaxHeight="100" VerticalAlignment="Bottom" Padding="16,0,16,16">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="20" />
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Grid.Row="0" Style="{ThemeResource BodyStrongTextBlockStyle}" Text="{x:Bind Name}"/>
+                                        <TextBlock Grid.Row="1" Style="{ThemeResource BodyTextBlockStyle}" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{x:Bind Description}"/>
+                                    </Grid>
+                                    <Button Name="OptionSettingButton" Visibility="Collapsed" HorizontalAlignment="Right" Style="{StaticResource DefaultButtonStyle}" VerticalAlignment="Top" Margin="8">
+                                        <FontIcon Glyph="&#xE712;" />
+                                        <Button.Flyout>
+                                            <MenuFlyout>
+                                                <MenuFlyoutItem x:Uid="ms-resource:///TaskOverview/EditInformationFlyoutItem" Command="{Binding Value.ViewModel.EditTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
+                                                <MenuFlyoutItem x:Uid="ms-resource:///TaskOverview/DeleteFlyoutItem" Command="{Binding Value.ViewModel.DeleteTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
+                                            </MenuFlyout>
+                                        </Button.Flyout>
+                                    </Button>
                                 </Grid>
-                                <Button Name="OptionSettingButton" Visibility="Collapsed" HorizontalAlignment="Right" Style="{StaticResource DefaultButtonStyle}" VerticalAlignment="Top" Margin="8">
-                                    <FontIcon Glyph="&#xE712;" />
-                                    <Button.Flyout>
-                                        <MenuFlyout>
-                                            <MenuFlyoutItem x:Uid="ms-resource:///TaskOverview/EditInformationFlyoutItem" Command="{Binding Value.ViewModel.EditTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
-                                            <MenuFlyoutItem x:Uid="ms-resource:///TaskOverview/DeleteFlyoutItem" Command="{Binding Value.ViewModel.DeleteTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
-                                        </MenuFlyout>
-                                    </Button.Flyout>
-                                </Button>
+
                                 <VisualStateManager.VisualStateGroups>
                                     <VisualStateGroup x:Name="OptionSettingButtonVisibility">
                                         <VisualState x:Name="OptionSettingButtonVisible">
@@ -82,7 +78,7 @@
                                         </VisualState>
                                     </VisualStateGroup>
                                 </VisualStateManager.VisualStateGroups>
-                            </Grid>
+                            </c:ImageMaskSurface>
                         </UserControl>
                     </DataTemplate>
                 </GridView.ItemTemplate>
