--- a/PhotoPasser/MainWindow.xaml
+++ b/PhotoPasser/MainWindow.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PhotoPasser"
+    xmlns:views="using:PhotoPasser.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:tk="using:CommunityToolkit.WinUI.Controls" xmlns:p="using:PhotoPasser.Primitive"
     mc:Ignorable="d"
@@ -140,7 +141,7 @@
                     
                 </Grid>
             </SplitView.Pane>
-            <Frame x:Name="contentFrame" CacheSize="4" SourcePageType="local:TaskOverview"/>
+            <Frame x:Name="contentFrame" CacheSize="4" SourcePageType="views:TaskOverview"/>
         </SplitView>
     </Grid>
 </Window>
