--- a/PhotoPasser/Views/ResultView.xaml
+++ b/PhotoPasser/Views/ResultView.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="PhotoPasser.ResultView"
+    x:Class="PhotoPasser.Views.ResultView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PhotoPasser"
+    xmlns:models="using:PhotoPasser.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:tk="using:CommunityToolkit.WinUI.Controls" 
     xmlns:controls="using:PhotoPasser.Controls"
+    xmlns:viewmodels="using:PhotoPasser.ViewModels"
     mc:Ignorable="d">
     <Page.Resources>
         <AcrylicBrush x:Key="PhotoBackgroundAcrylicFillColorDefaultBrush" TintColor="{ThemeResource SystemAccentColorLight2}" TintOpacity="0.24" TintLuminosityOpacity="0.4" FallbackColor="#F9F9F9" />
@@ -125,7 +126,7 @@
                         <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}" x:Uid="ms-resource:///ResultView/PinnedPhotosHeader"/>
                         <GridView HorizontalAlignment="Center" SelectionChanged="GridView_SelectionChanged" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="0" Grid.Row="1" ItemsSource="{x:Bind ViewModel.CurrentResult.PinnedPhotos,Mode=OneWay}">
                             <GridView.ItemTemplate>
-                                <DataTemplate x:DataType="local:PhotoInfo">
+                                <DataTemplate x:DataType="viewmodels:PhotoInfoViewModel">
                                     <controls:ImageMaskSurface BackgroundImage="{x:Bind Path,Converter={StaticResource UriImageSourceConverter},Mode=OneWay}"
                                                                AutoMaskColor="False"
                                                                MaskColor="{ThemeResource CardBackgroundFillColorSecondarySoild}"
@@ -138,7 +139,7 @@
                                             <controls:MaskStop Offset="1.0" Alpha="255"/>
                                         </controls:ImageMaskSurface.MaskStops>
                                         <Grid CornerRadius="{StaticResource OverlayCornerRadius}">
-                                            <TextBlock Text="{Binding UserName}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="8" Style="{ThemeResource CaptionTextBlockStyle}"/>
+                                            <TextBlock Text="{x:Bind UserName,Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="8" Style="{ThemeResource CaptionTextBlockStyle}"/>
                                             <Button Click="UnPinButton_Click" Style="{ThemeResource SubtleButtonStyle}" Margin="0,0,0,2" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                                                 <FontIcon Glyph="&#xE77A;" FontSize="12"/>
                                             </Button>
@@ -174,7 +175,7 @@
                     </Grid.RowDefinitions>
                     <controls:PhotoFlipView x:Name="ImageViewFlipView" Grid.Row="0" Background="Transparent" Photos="{x:Bind ViewModel.CurrentResult.Photos,Mode=OneWay}" SelectedIndex="0">
                         <controls:PhotoFlipView.HeaderTemplate>
-                            <DataTemplate x:DataType="local:PhotoInfo">
+                            <DataTemplate x:DataType="viewmodels:PhotoInfoViewModel">
                                 <TextBlock Text="{x:Bind UserName}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             </DataTemplate>
                         </controls:PhotoFlipView.HeaderTemplate>
@@ -186,9 +187,9 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}" x:Uid="ms-resource:///ResultView/PhotosSequenceHeader"/>
-                        <GridView SelectionChanged="GridView_SelectionChanged" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="{x:Bind ImageViewFlipView.SelectedIndex,Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="1" ItemsSource="{x:Bind ViewModel.CurrentResult.Photos,Mode=OneWay}">
+                            <GridView SelectionChanged="GridView_SelectionChanged" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="{x:Bind ImageViewFlipView.SelectedIndex,Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="1" ItemsSource="{x:Bind ViewModel.CurrentResult.Photos,Mode=OneWay}">
                             <GridView.ItemTemplate>
-                                <DataTemplate x:DataType="local:PhotoInfo">
+                                <DataTemplate x:DataType="viewmodels:PhotoInfoViewModel">
                                     <controls:ImageMaskSurface BackgroundImage="{x:Bind Path,Converter={StaticResource UriImageSourceConverter}}"
                                                                Width="150"
                                                                AutoMaskColor="False"
@@ -199,12 +200,10 @@
                                             <controls:MaskStop Offset="0.5" Alpha="0"/>
                                             <controls:MaskStop Offset="0.8" Alpha="255"/>
                                             <controls:MaskStop Offset="1.0" Alpha="255"/>
-
                                         </controls:ImageMaskSurface.MaskStops>
-                                        <TextBlock Text="{x:Bind UserName}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="8" Style="{ThemeResource CaptionTextBlockStyle}"/>
+                                        <TextBlock Text="{x:Bind UserName,Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="8" Style="{ThemeResource CaptionTextBlockStyle}"/>
                                     </controls:ImageMaskSurface>
                                 </DataTemplate>
-
                             </GridView.ItemTemplate>
                             <GridView.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -221,7 +220,7 @@
                 </Grid>
             </tk:Case>
             <tk:Case Value="LibraryView">
-                <controls:PhotoGalleryViewer Photos="{x:Bind ViewModel.CurrentResult.Photos, Mode=TwoWay}"
+                <controls:PhotoGalleryViewer Photos="{x:Bind ViewModel.CurrentResult.Photos, Mode=OneWay}"
                                              CopyResolve="PhotoGalleryViewer_CopyResolve"
                                              CopyAsBitmapResolve="PhotoGalleryViewer_CopyAsBitmapResolve"
                                              CopyAsPathResolve="PhotoGalleryViewer_CopyAsPathResolve"
